tests/good/misc/loop.pas
program loop;

var i;

begin
    for i := 0 to 9 do
        WriteLn(i);
    for i := 10 downto 1 do
        WriteLn(i)

end.
