tests/bad/boolean-cast.pas
program boolean_cast;

var
    x;

begin
    x := boolean(1)
end.
